# heatsens

./: .gitignore  CMakeLists.txt  FloorLoops.md  Logging.md  README.md  env.md  env.txt  flash_nvs.sh  nvs_template.csv  sdkconfig
components/button_wrapper/: CMakeLists.txt  idf_component.yml
components/button_wrapper/include/: button.hpp
components/tdisplays3/: t_display_s3.c  t_display_s3.h
main/: CMakeLists.txt  Kconfig  bmp280.cpp  bmp280.hpp  button.hpp  heatsens.cpp  i2c.cpp  i2c.hpp  idf_component.yml  mpu6050.cpp  mpu6050.hpp  mqtt.cpp  mqtt.hpp  mqtt_logger.cpp  mqtt_logger.hpp  nvs.cpp  nvs.hpp  temp_model.cpp  temp_model.hpp  wifi.cpp  wifi.hpp
main/fonts/: Rubik_Medium_48.c  Rubik_Regular_36.c
main/ui/: field.cpp  field.hpp  ui.cpp  ui.hpp
